tests/ui/const-generics/early/trivial-const-arg-macro-braced-expansion.stderr
error[E0308]: mismatched types
  --> $DIR/trivial-const-arg-macro-braced-expansion.rs:10:5
   |
LL | fn foo<const N: usize>() -> A<{ y!() }> {
   |                             ----------- expected `A<N>` because of return type
LL |     A::<1>
   |     ^^^^^^ expected `N`, found `1`
   |
   = note: expected struct `A<N>`
              found struct `A<1>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
